update dockerfile